Update PostItemPinned.css : Fix Title Overflow Error

--- a/src/layout/PostItemPinned.css
+++ b/src/layout/PostItemPinned.css
@@ -31,7 +31,7 @@
 }
 
 #postPinnedInfoTitle{
-    width: 430px;
+    width: 230px;
 
     margin-top: -5px;
 }
